repetition of css rules #2

--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1 { color: red; }
-        h2 { color: green; }
-    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Заголовок 1</h1>
-    <h2>Заголовок 2</h2>
-    <h3>Заголовок 3</h3>
-    <h4 style="color: pink;">Заголовок 4</h4>
+    <h1 class="simple">Hello world!</h1>
+    <p class="fz20 fz10">Text paragraph</p>
+    <h2 class="heading1 fz20 fz10">Heading 1!</h2>
+    <span class="heading2">Simple span element</span>
+    <h3 id="heading">Hello world!</h3>
+    <q class="simple">Hello webDev!</q>
+    <q>Hello webDev!</q>
 </body>
 
 </html>
