repetition of css rules #6

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <p>I'm just a paragraph</p>
-    <p class="style1">style1 controls me</p>
-    <p id="style2" class="style1">style2 controls me!</p>
-    <p id="style2">and me!</p>
-    <a href="#">Link</a>
-  </body>
+    <h4>Lorem ipsum dolor sit amet <span>consectetur</span> adipisicing elit. Placeat dolor explicabo in, modi vitae
+        quasi consectetur eum alias impedit quo rerum nemo optio repellendus laudantium ducimus pariatur possimus.
+        Aspernatur, asperiores.</р>
+        <hr />
+        <h4>Lorem ipsum dolor sit amet <div>consectetur</div>
+            <div class="mar">consectetur</div> adipisicing elit. Placeat dolor explicabo in, modi vitae quasi
+            consectetur eum alias impedit quo rerum nemo optio repellendus laudantium ducimus pariatur possimus.
+            Aspernatur, asperiores.
+        </h4>
+        <hr />
+        <h4>Lorem ipsum dolor sit amet <div class="test">consectetur</div> adipisicing elit. Placeat dolor explicabo in,
+            modi vitae quasi consectetur eum alias impedit quo rerum nemo optio repellendus laudantium ducimus pariatur
+            possimus. Aspernatur, asperiores.
+        </h4>
+</body>
 
 </html>
