--- a/index.html
+++ b/index.html
@@ -10,23 +10,9 @@
 </head>
 
 <body>
-    <!-- Using example -->
-    <!-- <div>
-      <img src="http://placekitten.com/g/200/300" alt="kitten" />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-        voluptatibus! Ipsum, saepe, enim laborum ducimus neque dolores
-        reiciendis at adipisci voluptatem rerum culpa? Animi provident expedita
-        dolore itaque, voluptates et.
-      </p>
-    </div> -->
-
-    <div class="wrapper">
-      <div class="item item1">1</div>
-      <div class="item item2">2</div>
-      <div class="item item3">3</div>
-    </div>
-    <div class="wrapper2"></div>
-  </body>
+  <h1>Hello world!</h1>
+  <h2>It's a webDev channel!</h2>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, facilis mollitia saepe reiciendis animi ea iste, unde harum et vel voluptate, repudiandae cupiditate iusto sapiente veritatis voluptas deleniti magnam labore.</p>
+</body>
 
 </html>
