--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Hello world!</h1>
-  <h2>It's a webDev channel!</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, facilis mollitia saepe reiciendis animi ea iste, unde harum et vel voluptate, repudiandae cupiditate iusto sapiente veritatis voluptas deleniti magnam labore.</p>
+  <div class="example"></div>
+  <hr />
+  <button>BUTTON</button>
+  <input type="text" />
+  <hr />
+  <h1>Hello world</h1>
+  <hr />
+  <div class="shadow"></div>
 </body>
 
 </html>
