repetition of css rules #13

--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 </head>
 
 <body>
-  <div class="example"></div>
-  <hr />
-  <button>BUTTON</button>
-  <input type="text" />
-  <hr />
-  <h1>Hello world</h1>
-  <hr />
-  <div class="shadow"></div>
+  <h2 class="first">Hello world</h2>
+  <h2 class="second">It's a webDev channel</h2>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure eveniet iusto laborum! Esse est cumque dicta rem,
+    pariatur officiis numquam quas facere perferendis nostrum! Voluptatibus sint quo tempora voluptates voluptatem?</p>
 </body>
 
 </html>
