--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-  <img src="https://images.pexels.com/photos/1447092/pexels-photo-1447092.png?auto=compress&cs=tinysrgb&dpr=2&w=500"
-    alt="image" width="500" />
-</body>
+  <div class="wrapper">
+    <img src="https://images.pexels.com/photos/1447092/pexels-photo-1447092.png?auto=compress&cs=tinysrgb&dpr=2&w=500"
+      alt="image" width="300" />
+  </div>
 
 </html>
